# dspy-demo

./: .gitignore  .replit  README.md  dspy_demo.py  minimal_dspy_demo.py  package-lock.json  package.json  pyproject.toml  replit.nix  simple_dspy.py  streamlit_dspy_demo.py  super_simple_dspy.py
attached_assets/: dspy_ai.md
