[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.3",
    "dspy-ai>=2.6.3",
    "google-auth>=2.38.0",
    "httpx>=0.28.1",
    "litellm>=1.61.3",
    "openai>=1.63.0",
    "openrouter>=1.0",
    "rich>=13.9.4",
]
