[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "dspy>=2.6.3",
    "dspy-ai>=2.6.3",
    "google-auth>=2.38.0",
    "httpx>=0.28.1",
    "litellm>=1.61.3",
    "openai>=1.63.0",
    "openrouter>=1.0",
    "rich>=13.9.4",
    "streamlit>=1.42.0",
    "tenacity>=9.0.0",
    "traceback-with-variables>=2.1.1",
]
